# FONtools

./: .build.yml  .gitignore  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.sourcehut/: arch.yml
fontools/: __init__.py  ensembl.py  indexes.py  remote.py
script/: ensembl2ucsc.py  fasta_format.py  fasta_seq_length.py  import_ensembl.py  merge_annot.py
src/fontools/: __init__.py  bed.py  ensembl.py  ensembl_db.py  gff.py  indexes.py  naming.py  remote.py  utils.py
src/fontools_scripts/: ensembl2ucsc.py  fasta_format.py  fasta_seq_length.py  fon_import.py  fon_mask_fasta.py  fon_transform.py  import_ensembl.py  merge_annot.py
