[metadata]
name = fontools
author = Charles E. Vejnar
description = JSON-based FON (Feature Object Notation) format and tools to simplify genomic annotations usage.
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License 2.0 (MPL 2.0)
url = https://git.sr.ht/~vejnar/FONtools

[options]
install_requires =
    pyfaidx
    pyfnutils
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ensembl2ucsc = fontools_scripts.ensembl2ucsc:main
    fasta_format = fontools_scripts.fasta_format:main
    fasta_seq_length = fontools_scripts.fasta_seq_length:main
    fon_import = fontools_scripts.fon_import:main
    fon_mask_fasta = fontools_scripts.fon_mask_fasta:main
    fon_transform = fontools_scripts.fon_transform:main
    import_ensembl = fontools_scripts.import_ensembl:main
    merge_annot = fontools_scripts.merge_annot:main
